--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
+*.log
 *.swp
 *.pyc
-db.sqlite3
-
-rhyme/static/rhyme/img/collections/*
+*.sqlite3
 
 localsettings.py
+__pycache__/
+
+rhyme/static/rhyme/img/collections/*
