--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": ".eslintrc.js",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-react-app": "^3.1.2"
+    "babel-preset-react-app": "^3.1.2",
+    "c3": "^0.7.20",
+    "d3": "^5.16.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
