--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
+    "bootstrap": "^3.3.0",
     "c3": "^0.7.20",
-    "d3": "^5.16.0"
+    "d3": "^5.16.0",
+    "jquery": "^3.5.1",
+    "knockout": "^3.5.0",
+    "less": "^3.7.1",
+    "select2": "^4.0.13",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
