--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-preset-react-app": "^3.1.2",
     "c3": "^0.7.20",
     "d3": "^5.16.0",
+    "htmx.org": "^1.9.12",
     "jquery": "^3.5.1",
     "knockout": "^3.5.0",
     "less": "^3.7.1",
