--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
     "babel-cli": "^6.26.0",
-    "babel-preset-react-app": "^3.1.2",
     "c3": "^0.7.20",
     "d3": "^5.16.0",
     "htmx.org": "^1.9.12",
@@ -18,10 +17,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-react-app": "^3.1.2",
-    "babel-runtime": "^6.26.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "babel-runtime": "^6.26.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
