--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": ".eslintrc.js",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "alpinejs": "^3.14.8",
     "babel-cli": "^6.26.0",
     "c3": "^0.7.20",
     "d3": "^5.16.0",
