--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "alpinejs": "^3.14.8",
     "babel-cli": "^6.26.0",
     "c3": "^0.7.20",
+    "choices.js": "^11.1.0",
     "d3": "^5.16.0",
     "htmx.org": "^1.9.12",
     "jquery": "^3.5.1",
