--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 django>=2.2.13
 GitPython==3.1.41
 gunicorn==23.0.0
+levenshtein>=0.27.1
 lorem>=0.1.1
 mysql-connector-python==8.0.15
 plexapi==4.17.0
